v12/fixtures/ast/errors/struct_functional_update_positional/source.able
struct Pair { i32, i32 }
p := Pair { 1, 2 }
updated := Pair { ...p, x: 10 }
